# Android-Lua

androidlua/: build.gradle
androidlua/src/main/jni/: CMakeLists.txt  empty.c
androidlua/src/main/jni/lua/: CMakeLists.txt
androidlua/src/main/jni/luajava/: CMakeLists.txt  luajava.c
